--- a/Connected-APP.css
+++ b/Connected-APP.css
@@ -23,7 +23,7 @@
 
 /* Style the "active" element to highlight the current page */
 .topnav a.active {
-  background-color: #2196F3;
+  background-color: white;
   color: white;
 }
 
