--- a/Connected-APP.css
+++ b/Connected-APP.css
@@ -72,3 +72,39 @@ body {
     border: 1px solid #ccc;  
   }
 }
+.block {
+	display: block;
+	width: 200px;
+	border: black;
+	background-color: #04AA6D;
+	color: white;
+	padding: 14px 28px;
+	font-size: 16px;
+	cursor: pointer;
+	text-align: center;
+}
+
+.block:hover {
+	background-color: #ddd;
+	color: black;
+}
+body{
+    background: url("  ") ;
+    background-attachment:fixed;
+	background-position:center;
+	background-size:100%;
+	background-repeat:no-repeat;
+	background-position: right bottom;
+}
+footer 
+{
+	position: fixed;
+	position: center;
+	bottom: 40px;
+	width: 99.5%;
+	height: 70px;
+	background-box: center white;
+}
+	hr 
+{
+	width: 15%;margin-left: auto;margin-right: auto;
