--- a/Connected-APP.css
+++ b/Connected-APP.css
@@ -1,15 +1,10 @@
-* {box-sizing: border-box;}
-
-body {
-  margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
+/* Add a black background color to the top navigation bar */
 .topnav {
   overflow: hidden;
   background-color: #e9e9e9;
 }
 
+/* Style the links inside the navigation bar */
 .topnav a {
   float: left;
   display: block;
@@ -20,47 +15,31 @@ body {
   font-size: 17px;
 }
 
+/* Change the color of links on hover */
 .topnav a:hover {
   background-color: #ddd;
   color: black;
 }
 
+/* Style the "active" element to highlight the current page */
 .topnav a.active {
   background-color: #2196F3;
   color: white;
 }
 
-.topnav .search-container {
-  float: right;
-}
-
+/* Style the search box inside the navigation bar */
 .topnav input[type=text] {
-  padding: 6px;
-  margin-top: 8px;
-  font-size: 17px;
-  border: none;
-}
-
-.topnav .search-container button {
   float: right;
-  padding: 6px 10px;
+  padding: 6px;
+  border: none;
   margin-top: 8px;
   margin-right: 16px;
-  background: #ddd;
   font-size: 17px;
-  border: none;
-  cursor: pointer;
 }
 
-.topnav .search-container button:hover {
-  background: #ccc;
-}
-
+/* When the screen is less than 600px wide, stack the links and the search field vertically instead of horizontally */
 @media screen and (max-width: 600px) {
-  .topnav .search-container {
-    float: none;
-  }
-  .topnav a, .topnav input[type=text], .topnav .search-container button {
+  .topnav a, .topnav input[type=text] {
     float: none;
     display: block;
     text-align: left;
@@ -118,9 +97,11 @@ footer
  padding: 12px 16px; /* Some padding */
  font-size: 16px; /* Set a font size */
  cursor: pointer; /* Mouse pointer on hover */
+  }
 }
 
 /* Darker background on mouse-over */
 .btn:hover {
  background-color: RoyalBlue;
-} 
+  }
+}
