--- a/Connected-APP.css
+++ b/Connected-APP.css
@@ -73,7 +73,7 @@
 	color: black;
 }
 body{
-    background: url("https://raw.githubusercontent.com/speedy84au11/COSC2196-Intro2IT-Assessment-1-Webpage/main/img/ePortfilio-BG-headshot.png") ;
+    background: url("   ") ;
     background-attachment:fixed;
 	background-position:center;
 	background-size:100%;
