--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* Resets */
 * {
     margin: 0;
     padding: 0;
@@ -6,9 +7,19 @@
     list-style: none;
 }
 
+body {
+    background-image: linear-gradient(to bottom, white , var(--main-color));
+}
+
+/* Set CSS variavle */
 :root {
-    --main-color: rgb(0, 24, 59);
-    --main-font: 'Poppins', sans-serif;
+    --main-color: #0B74BD;
+    --main-font: Georgia, 'Times New Roman', Times, serif;
+}
+
+/* Clear floated elements */
+.clearfix {
+    clear: both;
 }
 
 /* ======================
@@ -17,96 +28,229 @@
 
 header {
     text-align: center;
-    box-shadow: 1px 1px 1px 1px var(--main-color);
 }
+
+/* ======================
+   Topbar styling
+=========================*/
 
 .top-bar {
-    height: 25px;
+    height: 30px;
     background-color: var(--main-color);
+    padding: 2px 40px 2px 2px;
 }
 
-.top-bar p{
-    line-height: 25px;
-    color: white;
-    text-transform: uppercase;
-    font-size: .8rem;
+.topbar-content {
+    padding: 5px;
+    height: 100%;
+    background-color: white;
+    display: inline;
+    float: left;
+    margin: 0 2px;
+    cursor: pointer;
+}
+
+.topbar-content:hover {
+    opacity: .75;
+}
+
+.topbar-content p{
+    letter-spacing: .5px;
+    font-family: var(--main-font);
+    font-size: .6rem; 
     font-weight: bold;
 }
 
-nav {
-    height: 100%;
+.search-container {
+    float: right;
     display: flex;
-    justify-content: space-around;
+    justify-content: left;
     align-items: center;
+    height: 100%;
 }
 
-.logo {
-     margin: 10px 0;
+.input {
+    height: 100%;
+    width: 300px;
+    border: none;
 }
 
-.logo img {
-    width: 35vh;
-    border-radius: 6px;
-    box-shadow: 1px 1px 1px 1px var(--main-color);
+.search-button {
+    height: 100%;
+    width: 30px;
+    background-color: var(--main-color);
+    border: white solid 1px;
+    border-radius: 3px;
+    cursor: pointer;
+    border-radius: 0px 3px 3px 0px;
+}
+ .search-button i {
+     color: white;
 }
 
-.menu {
-    text-align: center;
-    position: relative;
+.mobile-sign-in {
+    display: none;
+    padding: 4px 10px;
+    background-color: white;
+    border-radius: 20px;
+    border: 3px double var(--main-color);
 }
 
+.mobile-sign-in a {
+    color: var(--main-color);
+    font-family: var(--main-font);
+}
+
+/* Topbar media query */
+@media screen and (max-width: 768px) {
+
+    .top-bar {
+       min-height: 35px;
+       padding: 3px 10px;
+    }
+    .topbar-content {
+        display: none;
+    }
+
+    .search-container {
+        float: left;
+    }
+
+    .mobile-sign-in {
+        display: inline;
+        float: right;
+    }
+
+    .input {
+        width: 250px;
+    }
+}
+
+/* Topbar media query */
+@media screen and (max-width: 400px) {
+
+    .input {
+        width: 180px;
+    }
+}
+ 
+/* ======================
+   Logo Bar styling
+=========================*/
+
+.logo-bar{
+     height: 100px;
+     text-align: center;
+     background-color: white;
+     padding: 0px 60px;
+}
+
+.logo-bar img {
+    padding-top: 10px;
+    height: 75%;
+}
+
+.sign-in {
+    position: absolute;
+    right: 30px;
+    top: 40px;
+    padding: 10px 22px;
+    background-color: var(--main-color);
+    border-radius: 20px;
+    border: 3px double white;
+    cursor: pointer;
+}
+
+.sign-in a {
+    color: white;
+    font-family: var(--main-font);
+}
+
+.sign-in:hover {
+    opacity: .8;
+}
+
+.mobile-menu {
+    display: none;
+    cursor: pointer;
+}
+
+.mobile-menu:hover {
+    opacity: .9;
+}
+
+/* Logo bar media query */
+@media screen and (max-width: 768px) {
+
+    .logo-bar {
+        box-shadow: 1px 1px 1px 1px var(--main-color);
+        padding: 0px 40px;
+    }
+
+    .sign-in {
+        display: none;
+    }
+
+    .mobile-menu {
+        display: inline;
+        float: right;
+        margin-top: 15px;
+    }
+
+    .logo-bar img {
+        float: left;
+    }   
+}
+
+/* Logo bar media query */ 
+@media screen and (max-width: 400px) {
+
+    .logo-bar {
+        padding: 0px 20px;
+    }
+
+    .logo-bar img {
+        height: 65%
+    }
+
+    .input {
+        width: 180px;
+    }
+}
+
+/* ======================
+   Navbar styling
+=========================*/
+
+/* UL */
+.menu-bar {
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(243, 243, 243);
+    border-top: solid 1px rgb(207, 207, 207);
+    box-shadow: 2px 2px 2px 2px var(--main-color);
+}
+
+/* LI */
 .menu-item {
     height: 100%;
     display: inline-block;
-    padding: 0 15px;
+    padding: 15px 25px;
+    cursor: pointer;
+    font-size: 1.1rem;
+    font-family: var(--main-font);
 }
 
-.menu li a {
-    color: rgb(0, 0, 0);
-    padding: 20px;
-    font-family: 'Poppins', sans-serif;
-    font-size: .7em;
-    font-weight: bold;
-    text-transform: uppercase;
-    transition-duration: 700ms;
-    border-radius: 3px;
-    line-height: 80px; 
-}
-
-.menu-item:hover .down-arrow, .menu li a:hover{
-    background-color: var(--main-color);
-    color: white;
-}
-
-.menu-item:nth-last-child(2) a{
-    padding: 12px 12px;
-    border: 2px solid var(--main-color);
-    background-color: var(--main-color);
-    border-radius: 8px;
-    color: white;
-}
-
-.menu-item:nth-last-child(2) a:hover{
-    background-color: white;
+.menu-item a {
     color: var(--main-color);
+    height: 100%;
+    width: 100%;
 }
 
-.menu-item:nth-last-child(1) a, .border-black{
-    padding: 12px 6px;
-    border: 2px solid var(--main-color);
-    border-radius: 8px;
-    color: var(--main-color);
-}
-
-.menu-item:nth-last-child(2) a::before, .menu-item:nth-last-child(1) a::before {
-    content:"\2713 ";
-    padding: 0 5px;
-}
-
-.down-arrow::after {
-    content:" \02c5";
-    position: absolute;
-    padding: 0 5px;
+.menu-item a:hover {
+    opacity: .7;
 }
 
 .hb-menu {
@@ -118,186 +262,362 @@ nav {
     opacity: .8;
 }
 
-@media screen and (max-width: 1058px) {
-    .logo {
-        font-size: .75em;
-    }
-
-    .menu-item {
-        padding: 0 8px;
-    }
-    .menu li a {
-        font-size: .6em;
-        padding: 10px;
-    }
-}
-
-
+/* Navbar media query */
 @media screen and (max-width: 768px) {
-    .logo {
-        font-size: 1em;
+
+    .menu-bar {
+        display: none;
     }
-
-   .menu {
-       display: none;
-   }
-
-   .search {
-       display: none;
-   }
-
-   .hb-menu {
-       display: block;
-   }
 }
 
-/* ======================
-   Dropdown Menu styling
-=========================*/
+/* ====================
+   Mobile Menu styling
+=======================*/
 
- .dd-menu {
-     display: none;
-     position: absolute;
-     padding-top: 15px;
-     text-align: left;
-     top: 95px;
-     width: 250px;
-     min-height: 250px;
-     background-color: white;
-     border-top: solid var(--main-color) 3px;
-     box-shadow:1px 1px 5px 5px var(--main-color);
-     z-index: 3;  
-} 
-
-.dd-menu li {
-    padding: 30px;   
-}
-
-.dd-menu li a{
-    padding-right: 50px;
-}
-
-.dd:hover .dd-menu {
-    display: block;    
-}
-
-/* ===================
-   Slide menu styling
-======================*/
-
-#slide-menu-container {
-    position: absolute;
+#mobile-menu-container {
     display: none;
-    width: 70vw;
-    top: 130px;
+    width: auto;
+    margin-top: 5px;  
+}
+
+.mobile-menu-content {
     background-color: white;
+    width: 80%;
+    margin: auto;
     padding: 30px;
-    border: var(--main-color) 1px solid;
-    box-shadow: .2px .2px 2px 2px rgb(206, 206, 206);
-    border-top: solid var(--main-color) 4px;
-    z-index: 3;
+    box-shadow: 1px 1px 1px 1px var(--main-color);
 }
 
-.dd-slide-item {
-    margin-top: 20px;
-    padding: 0 40px;
-    box-shadow: .2px .2px 5px 5px var(--main-color);
+.mobile-menu-item {
+    padding: 30px;
+    border-bottom: 1px solid var(--main-color);
 }
 
-.slide-content li{
-    border-bottom: var(--main-color) solid 1px;
-    padding: 10px 0;
-    text-align: left;
-    border-bottom: solid .3px rgb(240, 240, 240);
-}
-
-.slide-content li a {
-    display: block;
-    text-transform: capitalize;
-    font-family: 'Poppins', sans-serif;
-    font-weight: bold;
-    font-size: .9em;
+.mobile-menu-item a {
+    font-family: var(--main-font);
     color: var(--main-color);
-    cursor: pointer;
-    padding: 15px 5px;
-    border-radius: 4px;
+    font-size: 1.4rem;
+    padding: 5px 20px;
+    border-radius: 25px;
 }
 
-.slide-content li a:hover {
+.mobile-menu-item:hover .mobile-menu-item a{
     background-color: var(--main-color);
     color: white;
+    border: double 3px white;
 }
 
-.border-blue{
-    border: 2px solid var(--main-color);
-    border-radius: 8px;
-    color: rgb(33, 91, 251);
+.close {
+    float: right;
+    background-color: var(--main-color);
+    padding: 5px 15px;
+    border-radius: 20px;
+    border: 3px double white;
+    cursor: pointer;
 }
 
-.border-black{
-    border: 2px solid rgb(0, 0, 0);
-    border-radius: 8px;
+.close:hover {
+    opacity: .9;
 }
 
-.border-blue:hover, .border-black:hover{
-    background-color: 2px solid var(--main-color);
-    border-radius: 8px;
+.close a {
     color: white;
+    font-family: var(--main-font);
 }
 
-/* =================
-   Main styling
-===================*/
+.mobile-menu-item:hover {
+    opacity: .8;
+}
+
+/* =======================
+   Home page main styling
+=========================*/
 
 main {
-    height: 80vh;
+    text-align: center;
+    font-family: var(--main-font);
+}
+
+.small-heading {
+    width: 120px;
+    padding: 4px 0px;
+    margin: 10px auto;
+    color: var(--main-color);
+    border: double var(--main-color) 3px;
+    border-radius: 25px;
+}
+
+main h4 {
+    font-size: 1.4rem;
+}
+
+.objective-content {
+    padding: 60px;
+    min-height: 75vh;
+}
+
+.help-buttons-wrapper {
+    margin-top: 170px;
+    display: flex;
+    justify-content: center;
+    align-items: center;  
+}
+
+.can-content, .will-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.help-buttons-wrapper a {
+    cursor: pointer;
+    padding: 30px 50px;
+    margin: 0 0 30px 0;
+    background-color: var(--main-color);
+    color: white;
+    border: double white 5px;
+    border-radius: 50px;
+    font-size: 1.4rem;
+}
+
+.help-buttons-wrapper a:hover {
+    background-color: white;
+    color: var(--main-color);
+    border: double var(--main-color) 5px;
+}
+
+.help-buttons-wrapper p {
+    width: 80%;
+    font-size: 1.2rem;
+}
+
+/* Home page main styling media query */
+@media screen and (max-width: 768px) {
+
+    .help-buttons-wrapper {
+        flex-direction: column;
+        margin-top: 60px;
+    }
+
+    .can-content, .will-content {
+        padding: 0 0 70px 0;
+    }
+}
+
+/*=======================
+  Testamonial Section 
+=========================*/
+
+.testimonial {
+    padding: 30px 0 60px 0;
+    background-color: white;
+}
+
+.testimonial-wrapper {
+    margin-top: 60px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    font-family: var(--main-font);
+}
+
+.testimonial-content {
+    flex-basis: 25%;
+    padding-top: 30px;
+    box-shadow: 1px 1px 1px 1px var(--main-color);
+}
+  
+.test-text, .test-name, .test-location {
+    margin: auto;
+}
+
+.test-text {
+    width: 80%;
+    color: rgb(100, 100, 100);
+    font-size: 1.2em;
+    margin-top: 20px;
+    margin-bottom: 20px; 
+}
+
+.test-name {
+    width: 200px;
+    padding: 4px 14px;
+    background-color: var(--main-color);
+    font-family: var(--main-font);
+    border-radius: 20px;
+    border: 3px double white;
+    font-size: 1.2rem;
+}
+
+.test-location {
+    font-size: .9rem;
+    font-weight: bold;
+    margin-bottom: 40px;
+}
+
+/* Testimonial stlyling media query */
+@media screen and (max-width: 968px) {
+
+    .testimonial-wrapper {
+        flex-direction: column;
+        margin-top: 40px;
+    }
+
+    .test-text {
+        width: 45%;
+    }
+
+    .testimonial-content {
+        width: 50%;
+        margin: 30px;
+    }
+}
+
+/* Testimonial stlyling media query */
+@media screen and (max-width: 700px) {
+
+    .test-text {
+        width: 70%;
+    }
+
+    .test-name {
+        width: 150px;
+        font-size: 1rem;
+    }
+
+    .testimonial-content {
+        width: 70%;
+        margin: 30px;
+    }
+
+    .testimonial-content img {
+        height: 120px;
+    }
 }
 
 /* =================
    Footer styling
 ===================*/
 
-footer {
+.footer-content {
+    min-height: 80px;
+    padding-top: 20px;
     text-align: center;
-    background-color: var(--main-color);
-    border-top: 1px solid grey;  
+    background-color: rgb(238, 238, 238);
+    border-top: 1px solid var(--main-color);     
 }
 
-.footer-menu {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 30px;
-}
-
-.item {
-    font-family: var(--main-font);
-    flex-basis: 25%;
-    color: white;
-}
-
-.item h4 {
-    color: white;
-    text-transform: uppercase;
-}
-
-.item a {
-    color: white;
-    text-transform: capitalize;
-}
-
-.item li {
-    padding-top: 10px;
+.footer-content img {
+    height: 30px;
 }
 
 .bottom-bar {
     text-align: center;
     height: 25px;
-    background-color: var(--main-color);
     color: white;
-    border-top: solid 1px white;
+    background-color: var(--main-color);
 }
 
-.bottom-bar p {
-    line-height: 25px;
+/* Footer media query */
+@media screen and (max-width: 500px) {
+
+    .footer-content img {
+        height: 20px;
+    }
+
+    .footer-content {
+        min-height: 60px;
+    }
+}
+
+
+/*==========================
+  Registration form styling
+    ========================*/
+.registration {
+    margin: 25px 0px;
+    display: flex;
+    justify-content: center;  
+}
+
+.registration-wrapper {
+    width: 50%;
+}
+
+input[type=text], select, textarea {
+width: 100%;
+padding: 12px;
+border: 1px solid #ccc;
+border-radius: 4px;
+resize: vertical;
+}
+
+label {
+padding: 12px 12px 12px 0;
+display: inline-block;
+}
+
+input[type=submit] {
+background-color: var(--main-color);
+color: white;
+padding: 12px 20px;
+border: none;
+border-radius: 4px;
+cursor: pointer;
+float: right;
+}
+
+input[type=submit]:hover {
+opacity: .7;
+}
+
+.form-container {
+border-radius: 5px;
+background-color: #f2f2f2;
+padding: 20px;
+}
+
+.form-heading {
+    text-align: center;
+    padding: 5px 0px 20px 0px;
+    text-transform: uppercase;
+}
+
+.label-column {
+float: left;
+width: 25%;
+margin-top: 6px;
+}
+
+.input-column {
+float: left;
+width: 75%;
+margin-top: 6px;
+}
+
+/* Clear floats  */
+.row:after {
+content: "";
+display: table;
+clear: both;
+}
+
+/* Registration form media query */
+@media screen and (max-width: 600px) {
+    .col-25, .col-75, input[type=submit] {
+        width: 100%;
+        margin-top: 0;
+    }
+}
+
+/* Temporary page styling */
+.temporary{
+    height: 80vh;
+    width: 100vw;
+    text-align: center;
+    padding-top: 25vh;
+    font-size: 2rem;
+    color: white;
+    font-weight: bold;
 }
