services.php styling, Created search bar functionality to index.php and services.php, improvements to style.css

--- a/css/style.css
+++ b/css/style.css
@@ -389,7 +389,7 @@ header {
 }
 
 .sign-in-tab-content {
-    height: 50vh;
+    height: auto;
     width: 50vh;
     border: 1px solid gray;
     padding: 20px;
