--- a/css/style.css
+++ b/css/style.css
@@ -1072,3 +1072,172 @@ input[type=submit]:hover {
     color: var(--main-color);
     font-weight: bold;
 }
+
+/*==========================
+  Shop styling
+  ========================*/
+
+.shop-wrapper {
+    display: grid;
+    grid-template-columns: 15% 1fr 1fr 1fr 1fr 15%;
+    grid-template-rows: 50px auto auto auto auto auto;
+    width: 100vw;
+    min-height: 100vh;
+}
+
+.content-top, .content-left, .content-right-top, .content-right-bottom {
+    
+}
+
+.content-top {  /*======  Grid item 1 =======*/
+    grid-column: 2/ span 4;
+    border-bottom: solid 1px var(--main-color);
+    padding-left: 50px;
+    text-align: left;
+}
+
+.content-left {  /*======  Grid item 2 =======*/
+    grid-column: 2/ span 1;
+    grid-row: 2/ span 5;
+    padding: 20px;
+}
+
+.content-filter {
+    padding: 20px;
+    height: 30vh;
+    border: solid 1px var(--main-color);
+    text-align: left;
+    margin: 20px 0px;
+}
+
+.content-filter h4 {
+    font-size: .8rem;
+    text-align: left;
+    color: rgb(83, 83, 83);
+    text-transform: uppercase;
+}
+
+.content-right-top { /*======  Grid item 3 =======*/
+    background-image: linear-gradient(180deg, var(--main-color) 0%, var(--white) 40%, var(--white) 60%, var(--main-color) 100%);
+    border: solid 1px var(--main-color);
+    grid-column: 3/ span 3;
+    margin-top: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.content-right-top h1 {
+    text-transform: uppercase;
+    color: var(--main-color);
+    font-size: 2rem;
+    
+}
+
+.content-right-bottom { /*======  Grid item 4 =======*/
+    grid-column: 3/ span 3;
+    grid-row: 3/ span 4;
+    
+}
+
+
+.product-card {
+    margin-top: 40px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.product-content {
+    margin: 20px 0;
+    padding-bottom: 20px;
+    flex-basis: 30%;
+    border: solid 1px var(--main-color);
+    position: relative;
+}
+
+.product-content img {
+    width: 100%;
+    padding: 10px;
+    border-bottom: solid 1px var(--main-color);
+}
+
+.product-content button {
+    background-color: var(--main-color);
+    color: var(--white);
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    margin: 10px 0;
+    cursor: pointer;
+}
+
+.product-content button:hover {
+    opacity: .7;
+}
+
+.product-status {
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    text-transform: uppercase;
+    font-size: .6rem;
+    line-height: 40px;
+    font-weight: bold;
+    width: 40px;
+    height: 40px;
+    border-radius: 25px;
+}
+
+.product-name {
+    text-transform: uppercase;
+    color: rgb(36, 36, 36);
+    padding: 7px 0px;
+}
+
+.product-price {
+    color: red;
+    padding: 7px 0px;
+}
+
+.new-product {
+    color: var(--white);
+    background-color: var(--main-color);
+    border: solid 1px var(--main-color);
+}
+
+.old-product {
+    color: var(--main-color);
+    background-color: var(--white);
+    border: solid 1px var(--main-color);
+}
+ 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.breadcrumb li {
+    display: inline;
+}
+
+.breadcrumb li a{
+    line-height: 50px;
+    font-family: var(--main-font);
+    color: var(--main-color);
+    letter-spacing: 1px;
+}
