--- a/css/style.css
+++ b/css/style.css
@@ -145,18 +145,26 @@ header {
     opacity: .7;
 }
 
-#top-bar span {
-    text-transform: uppercase;
-    background-color: var(--main-color);
-    color: var(--white);
+.welcome-message span{
+    font-size: 1rem;
+    text-transform: capitalize; 
     font-weight: bold;
-    padding:  2px 5px;
-    border: double 3px var(--white);
-    border-radius: 14px;
+    float: right;
+    margin-right: 30px;
     cursor: pointer;
 }
 
-#top-bar span:hover {
+.welcome-message span i {
+    font-size: 1rem;
+    padding: 2px;
+    border-radius: 25px;
+    color: var(--main-color);
+    background-color: var(--white);
+    border: solid 1px var(--main-color);
+    margin: 0 10px;
+}
+
+#top-bar .welcome-message:hover {
     opacity: .8;
 }
 
@@ -171,84 +179,64 @@ header {
     #toggle-dark, #toggle-light {
         display: none;
     }
+
+
+    #toggle-colors {
+        padding: 0 2px;
+        height: 17px;
+        line-height: 17px;
+        font-size: .4rem;
+        top: 5px
+    }
+
+    .welcome-message span{
+        font-size: .7rem;
+    }
+    
+    .welcome-message span i {
+        font-size: .7rem;
+    }
+    
 }
 
+/* =======================
+    User dropdown Styling
+==========================*/
 
-/* ===================
-    Digital Id Styling
-======================*/
-
-#digital-id {
+#user-dropdown {
     display: none;
     position: absolute;
-    top: 400;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    background-color: rgba(255, 255, 255, 0.85);
-    justify-content: center;
-    align-items: center;
-    z-index: 1000;
-}
-
-.digital-id-content {
-    width: 80vw;
-    min-height: 80vh;
-    background-color: var(--white);
-    border: solid 1px var(--main-color);
-}   
-
-.digital-id-content img{
-    width: 40%;
-    margin: 50px 0 10px 0;
+    top: 30px;
+    right: 20px;
     box-shadow: 1px 2px 2px 1px var(--main-color);
+    background-color: var(--white);
+    padding: 18px 10px;
+}
+
+#user-dropdown li{
+    padding: 20px;
+    border-bottom: 1px solid var(--main-color);
+}
+
+#user-dropdown ul{
+    padding-top: 15px;
 }
 
 
-#digital-id .close {
-    float: right;
-    padding: 10px 30px;  
-}
-
-#digital-id .d-id {
-    float: left;
-    padding: 10px 30px;
-
-}
-
-#digital-id .close, #digital-id .d-id {
-    margin: 10px 10px;
-    font-size: 1.3rem;
-    text-transform: uppercase;
-    background-image: linear-gradient(90deg, var(--main-color) 0%, var(--white) 50%, var(--white) 50%, var(--main-color) 100%);
+#user-dropdown li a{
+    text-transform: capitalize;
     color: var(--main-color);
-    border-radius: 25px ;
+    
+
 }
 
-#digital-id .d-id-name {
-    margin-top: 30px;
-    padding: 30px;
-    text-transform: uppercase;
-    font-size: 2.5rem;
-    background-image: linear-gradient(90deg, var(--main-color) 0%, var(--white) 50%, var(--white) 50%, var(--main-color) 100%);
-    color: var(--main-color);
+/* Top bar media query */
+@media screen and (max-width: 768px) {
+
+    #user-dropdown li a {
+        font-size: .8rem;
+    }
 }
-
-#digital-id .close {
-    cursor: pointer;
-}
-
-#digital-id .close:hover {
-    opacity: .7;
-}
-
-#digital-id p {
-    font-size: 1.3rem;
-}
-
-
-
-
  
 /* ======================
    Logo Bar styling
@@ -514,6 +502,21 @@ header {
 #sign-in-tab button:hover {
     opacity: .7;
 }
+
+/* Sign in tab styling media query */
+@media screen and (max-width: 768px) {
+   .sign-in-tab-content {
+       width: 70%;
+   }
+   
+}
+
+@media screen and (max-width: 468px) {
+    .sign-in-tab-content {
+        width: 90%;
+    }
+    
+ }
 
 
 /* =======================
@@ -813,7 +816,7 @@ main h4 {
 
 .services-top {
     border-bottom: solid 1px var(--main-color);
-    width: 70%;
+    width: 80%;
     text-align: left;
     margin: auto;
     padding-left: 50px;
@@ -903,18 +906,28 @@ main h4 {
 
     .service-content {
         width: 80%;
-       
+    }
+
+    .service-content {
+        width: 90%;
     }
 }
 
 @media screen and (max-width: 900px) {
-    .service-content {
-        width: 90%;
-    }
+    
 
     .service {
         padding: 20px;
     } 
+
+    .services-top {
+        width: 90%;
+        padding-left: 25px;
+    }
+
+    .services-top a {
+        font-size: .7rem;
+    }
 }
 
 @media screen and (max-width: 700px) {
@@ -1184,7 +1197,7 @@ input[type=submit]:hover {
 
 .shop-wrapper {
     display: grid;
-    grid-template-columns: 15% 1fr 1fr 1fr 1fr 15%;
+    grid-template-columns: 10% 1fr 1fr 1fr 1fr 10%;
     grid-template-rows: 50px auto auto auto auto auto;
     width: 100vw;
     min-height: 100vh;
@@ -1237,7 +1250,6 @@ input[type=submit]:hover {
 .content-right-bottom { /*======  Grid item 4 =======*/
     grid-column: 3/ span 3;
     grid-row: 3/ span 4;
-    
 }
 
 .product-card {
@@ -1246,12 +1258,13 @@ input[type=submit]:hover {
     justify-content: space-around;
     align-items: center;
     flex-wrap: wrap;
+    
 }
 
 .product-content {
     margin: 20px 0;
     padding-bottom: 20px;
-    flex-basis: 30%;
+    flex-basis: 40%;
     border: solid 1px var(--main-color);
     position: relative;
 }
@@ -1311,6 +1324,50 @@ input[type=submit]:hover {
     background-color: var(--white);
     border: solid 1px var(--main-color);
 }
+
+
+@media screen and (max-width: 768px) {
+    .product-content {
+        flex-basis: 85%;
+    }
+}
+
+
+@media screen and (max-width: 1100px) {
+    
+
+    .shop-wrapper {
+        grid-template-columns: 10% 1fr 1fr 1fr 1fr 10%;
+        grid-template-rows: 50px auto auto auto auto auto;
+    }
+
+    .content-top { 
+        grid-column: 2/ span 4;
+        grid-row: 1/ span 1;
+        padding-left: 20px;
+        font-size: .6rem;
+    }
+    
+    
+    .content-left {  /*======  Grid item 2 =======*/
+        grid-column: 2/ span 1;
+        grid-row: 4/ span 1;
+        padding: 20px;
+        flex-direction: column;
+    }
+
+    .content-right-top { /*======  Grid item 3 =======*/
+        grid-column: 2/ span 4;
+        grid-row: 2/ span 1;
+        padding: 20px;
+    }
+
+    .content-right-bottom { /*======  Grid item 4 =======*/
+        grid-column: 2/ span 4;
+        grid-row: 3/ span 1;
+        
+    }
+}
  
 
 /*==========================
@@ -1319,7 +1376,7 @@ input[type=submit]:hover {
 
 .contact-wrapper {
     display: grid;
-    grid-template-columns: 15% 1fr 1fr 15%;
+    grid-template-columns: 10% 1fr 1fr 10%;
     grid-template-rows: 50px auto auto auto ;
     width: 100vw;
     min-height: auto;
@@ -1379,6 +1436,12 @@ input[type=submit]:hover {
     } 
 }
 
+@media screen and (max-width: 900px) {
+    .contact-top{
+        padding-left: 20px;
+        font-size: .6rem;
+    } 
+}
 
 
 
@@ -1388,7 +1451,7 @@ input[type=submit]:hover {
 
 .about-wrapper {
     display: grid;
-    grid-template-columns: 15% 1fr 1fr 15%;
+    grid-template-columns: 10% 1fr 1fr 10%;
     grid-template-rows: 50px auto auto auto ;
     width: 100vw;
     min-height: 70vh;
@@ -1398,7 +1461,6 @@ input[type=submit]:hover {
     grid-column: 2/ span 2;
     border-bottom: solid 1px var(--main-color);
     padding-left: 50px;
-   
 }
 
 
@@ -1406,4 +1468,60 @@ input[type=submit]:hover {
     grid-column: 2/ span 2;
     grid-row: 2/ span 3;
     border: solid 1px var(--main-color);
+}
+
+
+@media screen and (max-width: 900px) {
+    .about-top{
+        padding-left: 20px;
+        font-size: .6rem; 
+    }  
+}
+
+
+/* ===================
+    Digital Id Styling
+====================== */
+
+.d-id-top {
+    margin: 0 10%;
+    border-bottom: solid 1px var(--main-color);
+}
+
+#digital-id {
+    margin: 30px 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.digital-id-content {
+    width: 60vw;
+    min-height: 80vh;
+    background-color: var(--white);
+    border: solid 1px var(--main-color);
+    text-align: center;
+}   
+
+.digital-id-content img{
+    width: 40%;
+    margin: 50px auto;
+    border: solid 1px var(--main-color);
+    border-radius: 15px;
+}
+
+
+#digital-id .d-id-name {
+    padding: 30px;
+    text-transform: uppercase;
+    font-size: 2.5rem;
+    background-image: linear-gradient(90deg, var(--main-color) 0%, var(--white) 50%, var(--white) 50%, var(--main-color) 100%);
+    color: var(--main-color);
+}
+
+#digital-id p {
+    font-size: 2rem;
+    font-weight: bold;
+    color: var(--main-color);
+    padding: 10px;
 }
